Implémentation de la représentation graphique des graphes grilles et d'autres modifications tkt tu vas voir

--- a/Projet_C/Makefile
+++ b/Projet_C/Makefile
@@ -4,13 +4,13 @@ pFile.o: pFile.c pFile.h
 	gcc -c pFile.c
 
 graph.o: graph.c graph.h pFile.h
-	gcc -c graph.c
+	gcc -c -lm graph.c
 
 Projet_C.o: Projet_C.c graph.h
 	gcc -c Projet_C.c
 
 Projet_C: Projet_C.o pFile.o graph.o
-	gcc Projet_C.o pFile.o graph.o -o Projet_C
+	gcc Projet_C.o pFile.o graph.o -lm -o Projet_C
 clean: 
 	rm -rf *.o
 
